Modified the readme.

--- a/README.rdoc
+++ b/README.rdoc
@@ -7,6 +7,8 @@ barely started.
 
 Stay tuned.
 
+Keep staying tuned.
+
 == Contributing to cursed_console
  
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
